<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity_text">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="minus_button_text">-</string>
    <string name="default_quantity">2</string>
    <string name="plus_button_text">+</string>
    <string name="order_button_text">Order</string>
    <string name="default_price">$5</string>
    <string name="user_name_hint">Name</string>
    <string name="whipped_cream_topping">Whipped Cream</string>
    <string name="chocolate_topping">Chocolate</string>
    <string name="vanillaCreamer_topping">Vanilla Cream</string>

    <!--
   Name for coffee_optionsrder summary. It will be shown in the format of "Name: Kermit" where Kermit is the
   user's name. [CHAR LIMIT=NONE]
 -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Kermit">%s</xliff:g></string>

    <!--
      Whipped cream topping for coffee_optionsrder summary. It will be shown in the format of
      "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

    <!--
      Chocolate topping for coffee_optionsrder summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>


    <!--
      Chocolate topping for coffee_optionsrder summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_vanillaCreamer">Add vanilla creamer? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <!--
Quantity for coffee_optionsrder summary. It will be shown in the format of "Quantity: 2" where 2 is the
number of coffees ordered. [CHAR LIMIT=NONE]
-->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%s</xliff:g></string>

</resources>
